--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <script src="./assets/scripts/index.js" defer></script>
+  <script src="./public/dist/scripts/app.js" defer></script>
   <title>Battleship</title>
 </head>
 
