--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <script src="./public/dist/scripts/app.js" defer></script>
+  <script src="./assets/scripts/index.js" defer></script>
   <title>Battleship</title>
 </head>
 
 <body>
+  <div class="modal modal--hidden">
+    <h2 class="modal__description">Player must have a name!</h2>
+    <span class="modal__close">✖</span>
+  </div>
   <audio muted autoplay id="bg-music" src="./assets/audio/bgMusic.mp3" type="audio/mp3"></audio>
   <div id="bg"></div>
   <h1 class="game-title">Battleship</h1>
@@ -25,14 +29,14 @@
         <input />
       </div>
       <div class="form__option-btns">
-        <input id="vs-pc" type="radio" name="game-mode">
-        <label for="vs-pc">Play against computer</label>
+        <input id="singleplayer" type="radio" name="game-mode">
+        <label for="singleplayer">Play against computer</label>
 
-        <input id="vs-player" type="radio" name="game-mode">
-        <label for="vs-player">Play against computer</label>
+        <input id="multiplayer" type="radio" name="game-mode">
+        <label for="multiplayer">Play against friend</label>
       </div>
 
-      <button type="submit" class="form__button">Start</button>
+      <a href="#" type="submit" class="form__button">Start</a>
     </form>
   </div>
 
@@ -40,10 +44,19 @@
     <a class="app-actions__bg">
       <img src="assets/images/BackgroundVisible.svg" alt="Background Active icon">
     </a>
-    <a data-music="off" class="app-actions__music">
+    <a class="app-actions__music">
       <img src="assets/images/MusicPaused.svg" alt="Music Player Icon">
     </a>
   </div>
+  <script>
+    const formWrapper = document.querySelector('.form__option-btns');
+    const formOptions = formWrapper.querySelectorAll('input');
+    let mode;
+    formWrapper.addEventListener('click', () => {
+      if (formOptions[0].checked) mode = 'singleplayer';
+      if (formOptions[1].checked) mode = 'multiplayer';
+    })
+  </script>
 </body>
 
 </html>
