game board selection

--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -17,6 +17,21 @@
 <body>
   <audio muted autoplay id="bg-music" src="./assets/audio/bgMusic.mp3" type="audio/mp3"></audio>
   <div id="bg"></div>
+
+  <div class="board-wrapper">
+    <div class="board">
+      <div class="board__row"> </div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+      <div class="board__row"></div>
+    </div>
+  </div>
   <div class="app-actions">
     <a class="app-actions__bg">
       <img src="assets/images/BackgroundVisible.svg" alt="Background Active icon">
