dragging completed but undo

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="modal modal--hidden">
-    <h2 class="modal__description">Player must have a name and mode must be selected 😀</h2>
+    <h2 class="modal__description"></h2>
     <span class="modal__close">✖</span>
   </div>
   <audio autoplay="" id="bg-music" src="/public/assets/audio/bgMusic.mp3" type="audio/mp3"></audio>
