player board finished

--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -43,6 +43,7 @@
       <div data-name="Destroyer" data-size="2" class="ship ship--destroyer"></div>
     </div>
     <div class="board-btns">
+      <button class="board-btn board-btn--start board-btn--start--hidden">Start Game!</button>
       <button class="board-btn board-btn--rotate">Rotate ships</button>
       <button class="board-btn board-btn--undo-move">Undo last move</button>
     </div>
