--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -38,18 +38,19 @@
         <div class="board__row"></div>
       </div>
 
+      <div class="board-btns">
+        <div>
+          <button class="board-btn board-btn--rotate">Rotate ships</button>
+          <button class="board-btn board-btn--undo-move">Undo last move</button>
+        </div>
+        <button class="board-btn board-btn--start board-btn--start--hidden">Start Game!</button>
+      </div>
       <div class="ships">
         <div data-name="Carrier" data-size="5" class="ship ship--carrier"></div>
         <div data-name="Battleship" data-size="4" class="ship ship--battleship"></div>
         <div data-name="Cruiser" data-size="3" class="ship ship--cruiser"></div>
         <div data-name="Submarine" data-size="3" class="ship ship--submarine"></div>
         <div data-name="Destroyer" data-size="2" class="ship ship--destroyer"></div>
-      </div>
-      <div class="board-btns">
-        <button class="board-btn board-btn--start">Start Game!</button>
-        <!-- <button class="board-btn board-btn--start board-btn--start--hidden">Start Game!</button> -->
-        <button class="board-btn board-btn--rotate">Rotate ships</button>
-        <button class="board-btn board-btn--undo-move">Undo last move</button>
       </div>
     </div>
 
