--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -35,7 +35,9 @@
         <div class="board__row"></div>
         <div class="board__row"></div>
       </div>
-
+      <div class="move-indicator">
+        <!-- <img src="./assets/images/turnIndicator.svg" /> -->
+      </div>
       <div class="board-btns">
         <div>
           <button class="board-btn board-btn--rotate">Rotate ships</button>
@@ -64,6 +66,9 @@
         <div class="board__row board--enemy__row"></div>
         <div class="board__row board--enemy__row"></div>
         <div class="board__row board--enemy__row"></div>
+      </div>
+      <div class="move-indicator">
+        <img src="./assets/images/turnIndicator.svg" />
       </div>
     </div>
   </div>
