Move indicator added

--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -36,7 +36,7 @@
         <div class="board__row"></div>
       </div>
       <div class="move-indicator">
-        <!-- <img src="./assets/images/turnIndicator.svg" /> -->
+        <img data-player-move />
       </div>
       <div class="board-btns">
         <div>
@@ -68,7 +68,7 @@
         <div class="board__row board--enemy__row"></div>
       </div>
       <div class="move-indicator">
-        <img src="./assets/images/turnIndicator.svg" />
+        <img data-computer-move />
       </div>
     </div>
   </div>
