--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -72,6 +72,7 @@
       </div>
     </div>
   </div>
+  <h4 class="information-box">You sunked</h4>
   <div class="app-actions">
     <a class="app-actions__bg">
       <img src="assets/images/BackgroundVisible.svg" alt="Background Active icon" />
