--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -9,7 +9,7 @@
   <title>Battleship - singleplayer</title>
   <link rel="stylesheet" href="assets/styles/main.scss" />
   <script>
-    const mode = 'Singleplayer';
+    const mode = 'singleplayer';
   </script>
   <script src="./assets/scripts/index.js" defer type="module"></script>
 </head>
