--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -68,7 +68,7 @@
         <div class="board__row board--enemy__row"></div>
       </div>
       <div class="move-indicator">
-        <img data-computer-move />
+        <img data-enemy-move />
       </div>
     </div>
   </div>
