--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -20,8 +20,8 @@
     <span class="modal__close">✖</span>
   </div>
   <div id="bg"></div>
-  <div class="enemy-status">
-    <div class="enemy-status__connected">
+  <div class="player-status player-status--start" data-enemy-start>
+    <div class="player-status__connected">
       Enemy Connected
       <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
@@ -30,7 +30,7 @@
       </svg>
 
     </div>
-    <div class="enemy-status__ready">
+    <div class="player-status__ready">
       Enemy Ready
       <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
@@ -41,6 +41,18 @@
   </div>
   <div class="game-container">
     <div class="board-wrapper">
+      <div class="player-status" data-you-game-view data-player-status>
+        <h2 class="player-status__nick">Adam</h2>
+        <div class="player-status__connected">
+          Connected
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M12 16C10.9391 16 9.92172 15.5786 9.17157 14.8284C8.42143 14.0783 8 13.0609 8 12C8 10.9391 8.42143 9.92172 9.17157 9.17157C9.92172 8.42143 10.9391 8 12 8C13.0609 8 14.0783 8.42143 14.8284 9.17157C15.5786 9.92172 16 10.9391 16 12C16 13.0609 15.5786 14.0783 14.8284 14.8284C14.0783 15.5786 13.0609 16 12 16Z"
+              fill="#4ECB71" />
+          </svg>
+
+        </div>
+      </div>
       <div class="board">
         <div class="board__row"></div>
         <div class="board__row"></div>
@@ -73,6 +85,18 @@
     </div>
 
     <div class="board-wrapper--enemy">
+      <div class="player-status" data-enemy-game-view data-player-status>
+        <h2 class="player-status__nick">Adam</h2>
+        <div class="player-status__connected">
+          Connected
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M12 16C10.9391 16 9.92172 15.5786 9.17157 14.8284C8.42143 14.0783 8 13.0609 8 12C8 10.9391 8.42143 9.92172 9.17157 9.17157C9.92172 8.42143 10.9391 8 12 8C13.0609 8 14.0783 8.42143 14.8284 9.17157C15.5786 9.92172 16 10.9391 16 12C16 13.0609 15.5786 14.0783 14.8284 14.8284C14.0783 15.5786 13.0609 16 12 16Z"
+              fill="#4ECB71" />
+          </svg>
+
+        </div>
+      </div>
       <div class="board--enemy">
         <div class="board__row board--enemy__row"></div>
         <div class="board__row board--enemy__row"></div>
