--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
-  <title>Battleship - singleplayer</title>
+  <title>Battleship - multiplayer</title>
   <link rel="stylesheet" href="assets/styles/main.scss" />
   <script>
     const mode = 'multiplayer';
