--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -68,7 +68,7 @@
         <img data-player-move />
       </div>
       <div class="board-btns">
-        <div>
+        <div data-board-action-btns>
           <button class="board-btn board-btn--rotate">Rotate ships</button>
           <button class="board-btn board-btn--undo-move">Undo last move</button>
         </div>
