--- a/public/singleplayer.html
+++ b/public/singleplayer.html
@@ -21,7 +21,7 @@
   </div>
   <!-- <audio muted autoplay id="bg-music" src="./assets/audio/bgMusic.mp3" type="audio/mp3"></audio> -->
   <div id="bg"></div>
-  <div class="game-container">
+  <div class="game-container game-container--single">
     <div class="board-wrapper">
       <div class="board">
         <div class="board__row"></div>
