--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./assets/styles/main.scss">
-  <script src="/public/assets/scripts/index.js" defer type="module"></script>
+  <script src="./assets/scripts/noMode.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" defer></script>
+  <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"
+    integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H"
+    crossorigin="anonymous"></script>
+  <script src="./assets/scripts/index.js" type="module"></script>
   <title>Battleship</title>
 </head>
 
 <body>
+  <audio src="./assets/audio/bgMusic.mp3" paused></audio>
   <div class="modal modal--hidden">
     <h2 class="modal__description"></h2>
     <span class="modal__close">✖</span>
   </div>
-  <audio autoplay="" id="bg-music" src="/public/assets/audio/bgMusic.mp3" type="audio/mp3"></audio>
   <div id="bg"></div>
   <h1 class="game-title">Battleship</h1>
   <div class="form-wrapper">
@@ -45,17 +50,6 @@
       <img src="/public/assets/images/MusicPaused.svg" alt="Music Player Icon">
     </a>
   </div>
-  <script>
-    const formWrapper = document.querySelector('.form__option-btns');
-    const formOptions = formWrapper.querySelectorAll('input');
-    let mode;
-    formWrapper.addEventListener('click', (e) => {
-      if (formOptions[0].checked) mode = 'singleplayer';
-      if (formOptions[1].checked) mode = 'multiplayer';
-      console.log(mode);
-    });
-
-  </script>
 </body>
 
 </html>
