--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -8,19 +8,23 @@
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
   <title>Battleship - multiplayer</title>
   <link rel="stylesheet" href="assets/styles/main.scss" />
-  <script>
-    const mode = 'multiplayer';
-  </script>
+  <script src="./assets/scripts/multiplayerMode.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" defer></script>
+  <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"
+    integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H"
+    crossorigin="anonymous"></script>
   <script src="./assets/scripts/index.js" defer type="module"></script>
 </head>
 
 <body>
+  <audio src="./assets/audio/bgMusic.mp3" paused></audio>
   <div class="modal modal--hidden">
     <h2 class="modal__description"></h2>
     <span class="modal__close">✖</span>
   </div>
   <div id="bg"></div>
-  <div class="player-status player-status--start" data-enemy-start>
+  <div class="player-status player-status--start" data-enemy-start="">
     <div class="player-status__connected">
       Enemy Connected
       <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -31,7 +35,8 @@
     </div>
     <div class="player-status__ready">
       Enemy Ready
-      <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" data-enemy-ready>
+      <svg class="enemy-ready-icon" width="28" height="28" viewBox="0 0 24 24" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
         <path
           d="M12 16C10.9391 16 9.92172 15.5786 9.17157 14.8284C8.42143 14.0783 8 13.0609 8 12C8 10.9391 8.42143 9.92172 9.17157 9.17157C9.92172 8.42143 10.9391 8 12 8C13.0609 8 14.0783 8.42143 14.8284 9.17157C15.5786 9.92172 16 10.9391 16 12C16 13.0609 15.5786 14.0783 14.8284 14.8284C14.0783 15.5786 13.0609 16 12 16Z"
           fill="#CC1400" />
@@ -40,7 +45,7 @@
   </div>
   <div class="game-container">
     <div class="board-wrapper">
-      <div class="player-status" data-you-game-view data-player-status>
+      <div class="player-status" data-you-game-view="" data-player-status="">
         <h2 class="player-status__nick">Adam</h2>
         <div class="player-status__connected">
           Connected
@@ -65,10 +70,10 @@
         <div class="board__row"></div>
       </div>
       <div class="move-indicator">
-        <img data-player-move />
+        <img data-player-move="" />
       </div>
       <div class="board-btns">
-        <div data-board-action-btns>
+        <div data-board-action-btns="">
           <button class="board-btn board-btn--rotate">Rotate ships</button>
           <button class="board-btn board-btn--undo-move">Undo last move</button>
         </div>
@@ -84,7 +89,7 @@
     </div>
 
     <div class="board-wrapper--enemy">
-      <div class="player-status" data-enemy-game-view data-player-status>
+      <div class="player-status" data-enemy-game-view="" data-player-status="">
         <h2 class="player-status__nick">Adam</h2>
         <div class="player-status__connected">
           Connected
