--- a/public/multiplayer.html
+++ b/public/multiplayer.html
@@ -46,7 +46,7 @@
   <div class="game-container">
     <div class="board-wrapper">
       <div class="player-status" data-you-game-view="" data-player-status="">
-        <h2 class="player-status__nick">Adam</h2>
+        <h2 class="player-status__nick">Player</h2>
         <div class="player-status__connected">
           Connected
           <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -90,7 +90,7 @@
 
     <div class="board-wrapper--enemy">
       <div class="player-status" data-enemy-game-view="" data-player-status="">
-        <h2 class="player-status__nick">Adam</h2>
+        <h2 class="player-status__nick">Player</h2>
         <div class="player-status__connected">
           Connected
           <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
